--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "uglify-js": "~2.4.13",
+    "lodash": "~2.4.1",
     "minimist": "0.0.8",
-    "winston": "~0.7.2",
-    "lodash": "~2.4.1"
+    "process": "^0.7.0",
+    "uglify-js": "~2.4.13",
+    "winston": "~0.7.2"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
